# tasktaskrevolution

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TEST_COVERAGE_PLAN.md  TUTORIAL_TESTE.md  ZERO_COPY_ANALYSIS.md  cliff.toml  config.yaml  fix_all_mocks.py  fix_all_resources.py  fix_all_resources_final.py  fix_imports.sh  fix_mock_repos.py  fix_mock_repos.sh  fix_mocks.py  fix_mocks.sh  fix_remaining_mocks.py  fix_resource_tests.sh  run_tutorial_test.fish  rustfmt.toml  test_functional.sh  test_navigation.sh  test_project_manifest.rs  test_ttr_complete.sh  test_ttr_quick.sh  test_ttr_simple.sh  teste_ferias_layoff.sh  vacation_report.csv  validation-results.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: advanced-ci.yml  ci.yml  comprehensive-ci.yml  qa.yml  release.yaml  rust.yml
.ttr/: mappings.json
DIR/companies/TEST-001/: detail.html  gantt.html  index.html
backup_before_migration/companies/TEST-001/: company.yaml
benches/: task_operations.rs
companies/: COMP-001.yaml  COMP-002.yaml  company-1.yaml  company-2.yaml  company-3.yaml  company-4.yaml
companies/TECH-CORP/: company.yaml
coverage/: tarpaulin-report.html
docs/: README.md  ROADMAP.md  YAML_SPECIFICATION.md  api-version-policy.md  api-versioning-policy.md  cli-aliases.md  migration-guide.md  query-system.md  search-system.md  shell-completions.md  testing-guide.md  version-config.yaml
docs/schemas/: README.md  company-schema.md  config-schema.md  project-schema.md  resource-schema.md  task-schema.md
example/: config.yaml
example/e2e_tests/: Cargo.toml  README.md  mod.rs  run_tests.sh
example/e2e_tests/scenarios/: mod.rs  project_lifecycle.rs
example/e2e_tests/utils/: cli_runner.rs  file_assertions.rs  mod.rs
example/microservico-java/: project.yaml
example/microservico-java/public/: index.html  resources.html  tasks.html
example/microservico-java/resources/: Flavio.yaml  Joao.yaml
example/microservico-java/tasks/: TASK-3.yaml
projects/: 0199a4e3-926d-79ec-9454-7b8500de151a.yaml
scripts/: install-completions.ps1  install-completions.sh
src/: debug_company_test.rs  debug_company_test2.rs  lib.rs  main.rs
src/application/: app.rs  assign_resource_to_task_use_case.rs  build_context.rs  build_use_case.rs  create_config.rs  create_project.rs  create_project_use_case.rs  create_resource.rs  create_resource_use_case.rs  create_task_use_case.rs  create_time_off_use_case.rs  create_vacation_use_case.rs  errors.rs  execution_context.rs  gantt_use_case.rs  initialize_repository_use_case.rs  list_projects_use_case.rs  list_resources_use_case.rs  list_tasks_use_case.rs  mod.rs  task_report_use_case.rs  vacation_report_use_case.rs  validate_vacations_use_case.rs
src/application/company_management/: create_company.rs  mod.rs
src/application/company_settings/: mod.rs  show_config.rs  update_config.rs  validate_config.rs
src/application/cqrs/: example_usage.rs  mod.rs
src/application/create/: mod.rs  project.rs  resource.rs  task.rs  time_off.rs  vacation.rs
src/application/di/: container.rs  factory.rs  mod.rs  services.rs  traits.rs
src/application/init/: init_manager.rs  mod.rs  tests.rs
src/application/list/: companies.rs  mod.rs  projects.rs  resources.rs  tasks.rs
src/application/project/: assign_resource_to_task.rs  cancel_project.rs  describe_project.rs  detect_resource_conflicts.rs  mod.rs  update_project.rs
src/application/query/: mod.rs  query_builder.rs  query_executor.rs  query_validator.rs
src/application/report/: engine.rs  formatters.rs  mod.rs  task.rs  types.rs  vacation.rs  wip.rs
src/application/resource/: deactivate_resource.rs  describe_resource.rs  mod.rs  realtime_conflict_monitor.rs  update_resource.rs  validate_calendar_availability.rs
src/application/search/: mod.rs  result_formatter.rs  search_executor.rs  search_filter.rs
src/application/shared/: code_resolver.rs  mod.rs
src/domain/: config.rs  mod.rs  project.rs  resource.rs  task.rs
src/entities/: config.rs  mod.rs  project.rs  resource.rs
src/infrastructure/: errors.rs  mod.rs
src/interface/: assets.rs  cli.rs  mod.rs
static/: style.css
templates/: base.html  companies.html  company.html  company_detail.html  company_gantt.html  gantt.html  index.html  project.html  project_detail.html  project_gantt.html  resource_detail.html  resources.html  task_detail.html  tasks.html
templates/components/: gantt_chart.html
templates/projects/: data-pipeline.yaml  microservice.yaml  mobile-app.yaml  web-app.yaml
test_dist/: index.html
test_e2e/: config.yaml
teste_ferias/: config.yaml  project.yaml  vacation_report.csv
teste_ferias/resources/: João Silva.yaml  Maria Oliveira.yaml  Pedro Santos.yaml
tests/: README.md  architecture.rs  cli.rs  cqrs_tests.rs  resource_validation.rs  task_report_integration.rs  test_config.yaml  yaml_parsing_comprehensive.rs
tests/adapters/: company_repository_test.rs  mod.rs  project_repository_test.rs  resource_repository_test.rs  task_repository_test.rs
tests/integration/: README.md  advanced_workflows.rs  build_test.rs  compatibility.rs  data_validation.rs  delete_resource_test.rs  delete_task_test.rs  dependency_calculation_system_test.rs  e2e_tests.rs  error_scenarios.rs  external_integration.rs  list_resources_test.rs  mod.rs  performance.rs  query_engine_test.rs  search_system_test.rs  task_report_test.rs  test_config.rs  update_commands.rs  update_resource_test.rs  verbose_test.rs
tests/snapshots/: cli_help_test.rs
tests/test_suites/: compatibility_tests.rs  e2e_tests.rs  mod.rs  performance_tests.rs  regression_tests.rs  security_tests.rs  stress_tests.rs
(+240 files in other folders)
