[package]
name = "TaskTaskRevolution"
authors = ["Flávio Granato <flavio.granato@protonmail.com>"]
version = "0.5.2"
edition = "2024"
description = "Um utilitário de linha de comando para organizar suas tarefas e projetos."

[[bin]]
name = "ttr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
chrono = { version = "0.4.41", features = ["serde"] }
uuid7 = { version = "1.1.0", features = ["serde"] }
csv = "1.3.1"
validator = "0.20.0"
strum = { version = "0.27.1", features = ["derive"] }
tera = "1.19.1"
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
globwalk = "0.9.1"
glob = "0.3.2"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.20.0"
speculate = "0.1.2"
criterion = "0.6.0"
assert_fs = "1.1"
test-case = "3.3"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = 2
