[package]
name = "task_task_revolution"
authors = ["Flávio Granato <flavio.granato@protonmail.com>"]
version = "0.5.6"
edition = "2024"
description = "Um utilitário de linha de comando para organizar suas tarefas e projetos."

[[bin]]
name = "ttr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
chrono = { version = "0.4.41", features = ["serde"] }
uuid7 = { version = "1.1.0", features = ["serde"] }
rand = "0.8.5"
csv = "1.3.1"
validator = "0.20.0"
strum = { version = "0.27.1", features = ["derive"] }
tera = "1.19.1"
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
globwalk = "0.9.1"
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.20.0"
speculate = "0.1.2"
criterion = "0.6.0"
assert_fs = "1.1"
test-case = "3.3"
mockall = "0.12"
regex = "1.10"
assert_cmd = "2.0"
predicates = "3.1"

[[test]]
name = "data_validation"
path = "tests/integration/data_validation.rs"

[[test]]
name = "error_scenarios"
path = "tests/integration/error_scenarios.rs"

[[test]]
name = "performance"
path = "tests/integration/performance.rs"

[[test]]
name = "compatibility"
path = "tests/integration/compatibility.rs"

[[test]]
name = "external_integration"
path = "tests/integration/external_integration.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = 2
