[package]
name = "task_task_revolution"
authors = ["Flávio Granato <flavio.granato@protonmail.com>"]
version = "0.5.7"
edition = "2024"
description = "A powerful, flexible, and transparent project management tool that puts you in control. CLI-first design with beautiful HTML outputs."
repository = "https://github.com/flaviogranato/tasktaskrevolution"
homepage = "https://github.com/flaviogranato/tasktaskrevolution"
documentation = "https://github.com/flaviogranato/tasktaskrevolution#readme"
keywords = ["project-management", "cli", "gantt", "task-management", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ttr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.42", features = ["serde"] }
uuid7 = { version = "1.1.0", features = ["serde"] }
rand = "0.9.2"
csv = "1.3.1"
validator = "0.20.0"
strum = { version = "0.27.2", features = ["derive"] }
tera = "1.20.0"
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
globwalk = "0.9.1"
glob = "0.3.3"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.22.0"
speculate = "0.1.2"
criterion = "0.7.0"
assert_fs = "1.1.3"
test-case = "3.3.1"
mockall = "0.13.1"
regex = "1.11.2"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[test]]
name = "data_validation"
path = "tests/integration/data_validation.rs"

[[test]]
name = "error_scenarios"
path = "tests/integration/error_scenarios.rs"

[[test]]
name = "performance"
path = "tests/integration/performance.rs"

[[test]]
name = "compatibility"
path = "tests/integration/compatibility.rs"

[[test]]
name = "external_integration"
path = "tests/integration/external_integration.rs"

[[test]]
name = "update_commands"
path = "tests/integration/update_commands.rs"

[[test]]
name = "delete_task_test"
path = "tests/integration/delete_task_test.rs"

[[test]]
name = "update_resource_test"
path = "tests/integration/update_resource_test.rs"

[[test]]
name = "delete_resource_test"
path = "tests/integration/delete_resource_test.rs"

[[test]]
name = "list_resources_test"
path = "tests/integration/list_resources_test.rs"

[[test]]
name = "verbose_test"
path = "tests/integration/verbose_test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = 2
